// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/map renders correctly 1`] = `
<div
  class="box"
>
  <nav
    class="headerNav"
  >
    <div
      class="container "
    >
      <div
        class="flexContainer"
      >
        <a
          href="/"
        >
          <div
            class="item"
          >
            <span>
              iidx.io
            </span>
          </div>
        </a>
        <div
          class="item"
        >
          loading
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <div
      class="container "
    >
      <div
        class="user-profile-header-wrapper"
      >
        <div
          class="user-profile-header"
        >
          <div
            class="user-profile-content"
          >
            <div
              class="user-avatar"
            />
            <h2>
              @
              user
            </h2>
          </div>
        </div>
        <div
          class="tabs-wrapper"
        >
          <ul
            class="tabs"
          >
            <li
              class="tab-item"
            >
              <a
                href="/@user/sp"
              >
                <span
                  class="icon-text"
                >
                  Overview
                </span>
              </a>
            </li>
            <li
              class="tab-item"
            >
              <a
                href="/@user/sp/musics"
              >
                <span
                  class="icon-text"
                >
                  Musics
                </span>
              </a>
            </li>
            <li
              class="tab-item active"
            >
              <a
                href="/@user/sp/stats"
              >
                <span
                  class="icon-text"
                >
                  Stats
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="container "
    >
      <div
        class="box "
      >
        <div
          class="box-header"
        >
          <h2>
            Grades
          </h2>
        </div>
        <div
          class="table-shadow"
        >
          <div
            class="table-wrapper"
          >
            <table
              class="table"
            >
              <thead>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div />
                  </th>
                  <th>
                    AAA
                  </th>
                  <th>
                    AA
                  </th>
                  <th>
                    A
                  </th>
                  <th>
                    B
                  </th>
                  <th>
                    C
                  </th>
                  <th>
                    D
                  </th>
                  <th>
                    E
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    NO PLAY
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆12
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆11
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆10
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆9
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆8
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆7
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆6
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆5
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆4
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆3
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆2
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      ☆1
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
              </tbody>
              <tfoot>
                <tr>
                  <th
                    class="table-head-column"
                  >
                    <div>
                      Total
                    </div>
                  </th>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                  <td>
                    0
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="box"
  >
    <div
      class="container "
    >
      <div
        class="inner"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copyright fa-w-16 "
          data-icon="copyright"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
            fill="currentColor"
          />
        </svg>
         
        2018
         iidx.io |
         
        test
      </div>
    </div>
  </footer>
</div>
`;

exports[`/map renders correctly if there are graphql errors 1`] = `null`;

exports[`/map renders correctly if there are no required arguments 1`] = `
<div
  style="color: rgb(0, 0, 0); background: rgb(255, 255, 255); font-family: -apple-system, BlinkMacSystemFont, Roboto, \\"Segoe UI\\", \\"Fira Sans\\", Avenir, \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif; height: 100vh; text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center;"
>
  <div>
    <style>
      body { margin: 0 }
    </style>
    <h1
      style="display: inline-block; margin: 0px 20px 0px 0px; padding: 10px 23px 10px 0px; font-size: 24px; font-weight: 500; vertical-align: top;"
    >
      404
    </h1>
    <div
      style="display: inline-block; text-align: left; line-height: 49px; height: 49px; vertical-align: middle;"
    >
      <h2
        style="font-size: 14px; font-weight: normal; line-height: inherit; margin: 0px; padding: 0px;"
      >
        This page could not be found
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`/map renders correctly when loading 1`] = `
<div
  class="box"
>
  <nav
    class="headerNav"
  >
    <div
      class="container "
    >
      <div
        class="flexContainer"
      >
        <a
          href="/"
        >
          <div
            class="item"
          >
            <span>
              iidx.io
            </span>
          </div>
        </a>
        <div
          class="item"
        >
          loading
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <div
      class="container "
    >
      <div
        class="user-profile-header-wrapper"
      >
        <div
          class="user-profile-header"
        >
          <div
            class="user-profile-content"
          >
            <div
              class="user-avatar"
            />
            <h2>
              @
              user
            </h2>
          </div>
        </div>
        <div
          class="tabs-wrapper"
        >
          <ul
            class="tabs"
          >
            <li
              class="tab-item"
            >
              <a
                href="/@user/sp"
              >
                <span
                  class="icon-text"
                >
                  Overview
                </span>
              </a>
            </li>
            <li
              class="tab-item"
            >
              <a
                href="/@user/sp/musics"
              >
                <span
                  class="icon-text"
                >
                  Musics
                </span>
              </a>
            </li>
            <li
              class="tab-item active"
            >
              <a
                href="/@user/sp/stats"
              >
                <span
                  class="icon-text"
                >
                  Stats
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="container "
    />
  </div>
  <footer
    class="box"
  >
    <div
      class="container "
    >
      <div
        class="inner"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copyright fa-w-16 "
          data-icon="copyright"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z"
            fill="currentColor"
          />
        </svg>
         
        2018
         iidx.io |
         
        test
      </div>
    </div>
  </footer>
</div>
`;
